@@ -3,6 +3,8 @@ package com.tr.hsyn.time;
 
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -109,7 +111,7 @@ public class Duration {
 		
 		if (isDifferentByUnit(other)) {
 			
-			var d = other.getValueAs(this.unit);
+			Duration d = other.getValueAs(this.unit);
 			return new Duration(this.unit, this.value + d.getValue());
 		}
 		
@@ -264,16 +266,17 @@ public class Duration {
 	 */
 	public long toMilliseconds() {
 		//@off
-		return switch (unit) {
-			case MILLISECOND -> value;
-			case SECOND -> value * 1000;
-			case MINUTE -> value * 60000;
-			case HOUR -> value * 3600000;
-			case DAY -> value * 86400000;
-			case MONTH -> value * 259200000;
-			case YEAR -> value * 36500000;
-		};//@on
+		switch (unit) {
+			case MILLISECOND : return value;
+			case SECOND : return value * 1000;
+			case MINUTE : return value * 60000;
+			case HOUR  : return value * 3600000;
+			case DAY : return value * 86400000;
+			case MONTH  : return value * 259200000;
+			case YEAR : return value * 36500000;
+		}//@on
 		
+		return 0;
 	}
 	
 	/**
@@ -286,23 +289,24 @@ public class Duration {
 		
 		long value = toMilliseconds();
 		//@off
-		return switch (unit) {
-			case MILLISECOND -> new Duration(unit, value);
-			case SECOND -> new Duration(unit, value / 1000);
-			case MINUTE -> new Duration(unit, value / 60000);
-			case HOUR -> new Duration(unit, value / 3600000);
-			case DAY -> new Duration(unit, value / 86400000);
-			case MONTH -> new Duration(unit, value / 259200000);
-			case YEAR -> new Duration(unit, value / 36500000);
-		};//@on
+		switch (unit) {
+			case MILLISECOND : return new Duration(unit, value);
+			case SECOND : return new Duration(unit, value / 1000);
+			case MINUTE : return new Duration(unit, value / 60000);
+			case HOUR : return new Duration(unit, value / 3600000);
+			case DAY : return new Duration(unit, value / 86400000);
+			case MONTH : return new Duration(unit, value / 259200000);
+			case YEAR : return new Duration(unit, value / 36500000);
+		}//@on
 		
+		throw new IllegalArgumentException("Unknown unit: " + unit);
 	}
 	
 	public static void main(String[] args) {
 		
-		var duration  = Duration.of(Unit.MINUTE, 5);
-		var duration2 = Duration.ofMinute(-1);
-		var duration3 = duration.plus(duration2); // Duration{type=minute, value=4}
+		@NotNull Duration duration  = Duration.of(Unit.MINUTE, 5);
+		@NotNull Duration duration2 = Duration.ofMinute(-1);
+		Duration          duration3 = duration.plus(duration2); // Duration{type=minute, value=4}
 		System.out.println(duration3.toString());
 	}
 	
@@ -339,7 +343,7 @@ public class Duration {
 	@NotNull
 	public static DurationGroup of(@NotNull Duration... durations) {
 		
-		return new DurationGroup(List.of(durations));
+		return new DurationGroup(new ArrayList<>(Arrays.asList(durations)));
 	}
 	
 	/**
